# image-crunch

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
scripts/: generate-dev-icons.sh  use-dev-icons.sh  use-prod-icons.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: image_commands.rs  mod.rs  update_commands.rs
src-tauri/src/image/: formats.rs  mod.rs  processor.rs
src/components/: ActionButtons.tsx  DropZone.tsx  FileList.tsx  Icons.tsx  LanguageSwitcher.tsx  ResultsPanel.tsx  SettingsPanel.tsx  UpdateNotification.tsx  index.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json
src/store/: useAppStore.ts
src/types/: index.ts
