[package]
name = "image-crunch"
version = "0.1.0"
description = "Batch image optimization and conversion tool"
authors = ["daigotanaka0714"]
edition = "2021"
license = "MIT"
repository = "https://github.com/daigotanaka0714/image-crunch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_crunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = "0.25"
webp = "0.3"

# Parallel processing
rayon = "1.10"

# Directory traversal
walkdir = "2"

# Error handling
thiserror = "2"
anyhow = "1"

